--- a/package.json
+++ b/package.json
@@ -1,19 +1,46 @@
 {
-  "name": "hugo-quickstart",
-  "version": "1.0.0",
-  "description": "This is a hugo app which doesn't have Tina (or even a package.json) installed. To set it up, use `tina init`:",
-  "main": "index.js",
+  "name": "@tinacms/starter",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tinacms dev -c \"next dev\"",
+    "build": "tinacms build && next build",
+    "start": "tinacms build && next start",
+    "export": "npm run build && next export",
+    "lint": "eslint . --ext .ts,.tsx"
+  },
+  "devDependencies": {
+    "@tinacms/cli": "^0.0.0-20220915134921",
+    "@types/js-cookie": "^3.0.0",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.35",
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.13.0",
+    "postcss": "^8.3.11",
+    "postcss-import": "^14.0.2",
+    "postcss-nesting": "^10.1.0",
+    "tailwindcss": "^2.2.19"
   },
   "dependencies": {
-    "@tinacms/cli": "0.0.0-20220914230554",
-    "styled-components": "^5.3.5",
-    "tinacms": "0.0.0-20220914230554",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@headlessui/react": "^1.4.1",
+    "@tailwindcss/typography": "^0.4.1",
+    "date-fns": "^2.23.0",
+    "next": "^12.0.4",
+    "next-svgr": "^0.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-is": "^17.0.2",
+    "styled-components": "^5.1.3",
+    "styled-jsx": "^3.2.5",
+    "tinacms": "^0.0.0-20220915134921",
+    "typescript": "^4.5.2"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "resolutions": {
+    "final-form": "4.20.1",
+    "@headlessui/react": "1.4.1"
+  }
 }
