--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "tinacms dev -c \"next dev\"",
-    "build": "tinacms build && next build",
-    "start": "tinacms build && next start",
+    "dev": "tinacms dev -c \"hugo server -D\"",
+    "build": "tinacms build && hugo",
+    "start": "tinacms build && hugo server",
     "export": "npm run build && next export",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
-    "@tinacms/cli": "^0.0.0-20220915134921",
+    "@tinacms/cli": "^1.5.1",
     "@types/js-cookie": "^3.0.0",
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.35",
@@ -36,11 +36,7 @@
     "react-is": "^17.0.2",
     "styled-components": "^5.1.3",
     "styled-jsx": "^3.2.5",
-    "tinacms": "^0.0.0-20220915134921",
+    "tinacms": "^1.4.2",
     "typescript": "^4.5.2"
-  },
-  "resolutions": {
-    "final-form": "4.20.1",
-    "@headlessui/react": "1.4.1"
   }
 }
