--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -50,6 +50,11 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      - name: Build TinaCMS
+        env:
+           CLIENT_ID: ${{ secrets.TINA_PUBLIC_CLIENT_ID }}
+           TINA_TOKEN: ${{ secrets.TINA_TOKEN }}
+        run: ${{ steps.detect-package-manager.outputs.runner }} tinacms build
       - name: Build with Hugo
         env:
           # For maximum backward compatibility with Hugo modules
