--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -54,7 +54,7 @@ jobs:
         env:
            TINA_PUBLIC_CLIENT_ID: ${{ secrets.TINA_PUBLIC_CLIENT_ID }}
            TINA_TOKEN: ${{ secrets.TINA_TOKEN }}
-        run: npx tinacms build
+        run: npx tinacms build && rm public/admin/.gitignore
       - name: Build with Hugo
         env:
           # For maximum backward compatibility with Hugo modules
